--- a/Parks_Code_Morgan.ipynb
+++ b/Parks_Code_Morgan.ipynb
@@ -20,6 +20,300 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "matched-seattle",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               id          owner      secret server  farm  \\\n",
+      "0     49856813066    9771767@N04  83838b7d7b  65535    66   \n",
+      "1     51050150612  192454804@N08  d07257b1b3  65535    66   \n",
+      "2     50952829406   77318907@N08  6fe5b8ef3a  65535    66   \n",
+      "3     50952896937   77318907@N08  ebe224b984  65535    66   \n",
+      "4     50474879407   54718757@N00  a011599de5  65535    66   \n",
+      "...           ...            ...         ...    ...   ...   \n",
+      "2630      2396212   26829571@N00  bde5937b1c      1     1   \n",
+      "2631      2396193   26829571@N00  522a741b6f      3     1   \n",
+      "2632      2396154   26829571@N00  15fa2274c6      3     1   \n",
+      "2633    299062697   67833269@N00  07999b0fe9    121     1   \n",
+      "2634    291578974   67833269@N00  07c3d248b1    116     1   \n",
+      "\n",
+      "                           title  ispublic  isfriend  isfamily  \\\n",
+      "0              Angel's Gate Park         1         0         0   \n",
+      "1                   English Home         1         0         0   \n",
+      "2        Angel's Gate Cloudscape         1         0         0   \n",
+      "3     Harbor Entrance at Sunrise         1         0         0   \n",
+      "4                         22,834         1         0         0   \n",
+      "...                          ...       ...       ...       ...   \n",
+      "2630                       Buddy         1         0         0   \n",
+      "2631            Franklin Digging         1         0         0   \n",
+      "2632           Franklin Climbing         1         0         0   \n",
+      "2633      DRAW---Michelle-Onstot         1         0         0   \n",
+      "2634                 Da Aie Park         1         0         0   \n",
+      "\n",
+      "                                            description  ...   latitude  \\\n",
+      "0     {'_content': 'Have a wonderful day, everyone...'}  ...  33.709932   \n",
+      "1     {'_content': 'English style house in Los Angel...  ...  34.074580   \n",
+      "2                {'_content': 'San Pedro, CA\n",
+      "01-02-21'}  ...  33.721867   \n",
+      "3     {'_content': 'The Angel's Gate in San Pedro, C...  ...  33.721707   \n",
+      "4     {'_content': '22,834 smoke on the water, in th...  ...  33.732833   \n",
+      "...                                                 ...  ...        ...   \n",
+      "2630                                   {'_content': ''}  ...  34.115553   \n",
+      "2631                                   {'_content': ''}  ...  34.115553   \n",
+      "2632                                   {'_content': ''}  ...  34.115553   \n",
+      "2633  {'_content': 'From the Gallery A exhibition <a...  ...  33.713430   \n",
+      "2634  {'_content': 'From <a href=\"http://www.angelsg...  ...  33.713430   \n",
+      "\n",
+      "        longitude accuracy context            place_id     woeid  \\\n",
+      "0     -118.293882       16       0                       5392528   \n",
+      "1     -118.334275       16       0                       5355165   \n",
+      "2     -118.271759       16       0                       5392528   \n",
+      "3     -118.271791       16       0                       5392528   \n",
+      "4     -118.317989       16       0                       5392544   \n",
+      "...           ...      ...     ...                 ...       ...   \n",
+      "2630  -118.351421       16       0  6RAY6t1TWr2KLaELHw  28751302   \n",
+      "2631  -118.351421       16       0  6RAY6t1TWr2KLaELHw  28751302   \n",
+      "2632  -118.351421       16       0  6RAY6t1TWr2KLaELHw  28751302   \n",
+      "2633  -118.293313       16       0  .D8LiGdQUL_LN4aBcw  12587688   \n",
+      "2634  -118.293313       16       0  .D8LiGdQUL_LN4aBcw  12587688   \n",
+      "\n",
+      "     geo_is_public  geo_is_contact  geo_is_friend  geo_is_family  \n",
+      "0                1               0              0              0  \n",
+      "1                1               0              0              0  \n",
+      "2                1               0              0              0  \n",
+      "3                1               0              0              0  \n",
+      "4                1               0              0              0  \n",
+      "...            ...             ...            ...            ...  \n",
+      "2630             1               0              0              0  \n",
+      "2631             1               0              0              0  \n",
+      "2632             1               0              0              0  \n",
+      "2633             1               0              0              0  \n",
+      "2634             1               0              0              0  \n",
+      "\n",
+      "[2635 rows x 21 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "def get_parks(num_pages):\n",
+    "    park_list = []\n",
+    "    for i in range(1, num_pages+1):\n",
+    "        extras = 'geo,description,tags'\n",
+    "        park_names = 'MacArthur Park, Woodley Avenue Park, Rio de Los Angeles State Park, Runyon Canyon, Temescal Gateway, Heidelberg Park, Hancock Park, Franklin Canyon Park, Angels Gate, Coldwater Canyon, Chatsworth Park South, Cheviot Hills, Melveny Park'\n",
+    "        parks_LA = flickr.photos.search(tags=park_names, bbox = '-118.898278,33.704902,-118.161021,34.32848',\n",
+    "                                    method_name='flickr', page=i, per_page=500, extras=extras)\n",
+    "        park_list.extend(parks_LA['photos']['photo'])\n",
+    "    df = pd.DataFrame.from_dict(park_list, orient='columns')\n",
+    "    return df\n",
+    "parks_data = get_parks(12)\n",
+    "print(parks_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "intimate-crisis",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Also, added code to review the park names and add that a new column to the data frame called parkname with the associated park name to it\n",
+    "\n",
+    "park_names = ['macarthur', 'woodley', 'riodelosangeles', 'runyoncanyon', 'temescalgateway', 'heidelbergpark', 'hancockpark', 'franklincanyonpark', 'franklincanyonpark', 'angelsgate', 'coldwatercanyon', 'chatsworthparksouth', 'chatsworthpark','cheviothills', 'melvenypark']\n",
+    "\n",
+    "#parks_data['parkname'] = [x for x in park_names if x in parks_data['tags']]\n",
+    "def get_park_name(row):\n",
+    "    for park in park_names:\n",
+    "        if park in row['tags']:\n",
+    "            return park\n",
+    "    return 'Unknown'\n",
+    "parks_data['parkname'] = parks_data.apply(lambda row: get_park_name(row), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "revised-whale",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id',\n",
+       " 'owner',\n",
+       " 'secret',\n",
+       " 'server',\n",
+       " 'farm',\n",
+       " 'title',\n",
+       " 'ispublic',\n",
+       " 'isfriend',\n",
+       " 'isfamily',\n",
+       " 'description',\n",
+       " 'tags',\n",
+       " 'latitude',\n",
+       " 'longitude',\n",
+       " 'accuracy',\n",
+       " 'context',\n",
+       " 'place_id',\n",
+       " 'woeid',\n",
+       " 'geo_is_public',\n",
+       " 'geo_is_contact',\n",
+       " 'geo_is_friend',\n",
+       " 'geo_is_family',\n",
+       " 'parkname']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Internal check\n",
+    "check_unknowns = parks_data[ parks_data['parkname'] == 'Unknown' ]\n",
+    "check_unknowns [['tags','parkname']]\n",
+    "list(parks_data.columns)\n",
+    "#print(parks_data['parkname'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "induced-prescription",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       koreanfriendshipbell korean friendshipbell fri...\n",
+      "1         englishhome architecture losangeles hancockpark\n",
+      "2       angelsgate losangelesharbor sanpedro sunrise c...\n",
+      "3       sanpedro losangeles harbor california southern...\n",
+      "4       jrglongbeach smoke water harbor hiking sanpedr...\n",
+      "                              ...                        \n",
+      "2630    dog losangeles vizsla buddy ridgeback runyonca...\n",
+      "2631          losangeles runyoncanyon runyon weimardoodle\n",
+      "2632      dog losangeles runyoncanyon runyon weimardoodle\n",
+      "2633    art gallery artgallery exhibition draw artexhi...\n",
+      "2634    art painting gallery artgallery angelsgate agc...\n",
+      "Name: tags, Length: 2635, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parks_data['tags'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "objective-grounds",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The tags are in column 10\n",
+    "# Pull out the tags column into its own dataframe. Note: this dataframe is a Series (1 column)\n",
+    "df_park_tags = parks_data.iloc[:, 10]\n",
+    "df_park_tags\n",
+    "type(df_park_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "relevant-sunday",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       koreanfriendshipbell korean friendshipbell fri...\n",
+      "1         englishhome architecture losangeles hancockpark\n",
+      "2       angelsgate losangelesharbor sanpedro sunrise c...\n",
+      "3       sanpedro losangeles harbor california southern...\n",
+      "4       jrglongbeach smoke water harbor hiking sanpedr...\n",
+      "                              ...                        \n",
+      "2630    dog losangeles vizsla buddy ridgeback runyonca...\n",
+      "2631          losangeles runyoncanyon runyon weimardoodle\n",
+      "2632      dog losangeles runyoncanyon runyon weimardoodle\n",
+      "2633    art gallery artgallery exhibition draw artexhi...\n",
+      "2634    art painting gallery artgallery angelsgate agc...\n",
+      "Name: tags, Length: 2635, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clean up the tags\n",
+    "# First, make sure the words are all lowercase for consistency\n",
+    "df2_park_tags = df_park_tags.str.lower()\n",
+    "#type(mcarthurDf_tags)\n",
+    "print(df2_park_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "coupled-sperm",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'tags'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-9eda2d8a5f3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtags_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_park_tags\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'tags'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtags_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtags_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/UP229/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    851\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    852\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mkey_is_scalar\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 853\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    854\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    855\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_hashable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/UP229/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m_get_value\u001b[0;34m(self, label, takeable)\u001b[0m\n\u001b[1;32m    959\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    960\u001b[0m         \u001b[0;31m# Similar to Index.get_value, but we do not fall back to positional\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 961\u001b[0;31m         \u001b[0mloc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    962\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_values_for_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    963\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/UP229/lib/python3.7/site-packages/pandas/core/indexes/range.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m    352\u001b[0m                 \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    353\u001b[0m                     \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 354\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    355\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    356\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'tags'"
+     ]
+    }
+   ],
+   "source": [
+    "tags_list = df_park_tags['tags'].tolist()\n",
+    "print(tags_list)\n",
+    "type(tags_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "furnished-sculpture",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['page', 'pages', 'perpage', 'total', 'photo'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(photos.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "immune-arctic",
    "metadata": {},
@@ -591,24 +885,6 @@
     "photos = MacArthurPark['photos']\n",
     "from pprint import pprint\n",
     "pprint(photos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "furnished-sculpture",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['page', 'pages', 'perpage', 'total', 'photo'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(photos.keys())"
    ]
   },
   {
