Update 3 - Individual Parks-Morgan.ipynb

--- a/3 - Individual Parks-Morgan.ipynb
+++ b/3 - Individual Parks-Morgan.ipynb
@@ -496,6 +496,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Analysis of spread of CES and strength of each CES - macarthur park"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# import macarthur top tags\n",
+    "fn = 'top_tags_macarthur.csv'\n",
+    "macarthur_tags = pd.read_csv(fn)\n",
+    "macarthur_tags.head()\n",
+    "\n",
+    "# import CES code breakdown for macarthur park\n",
+    "fn2 = 'top_tags_macarthur.csv'\n",
+    "macarthur_tags = pd.read_csv(fn2)\n",
+    "macarthur_tags.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Woodley Park\n"
    ]
   },
