Added some explainers in markdown

--- a/2 - All Parks.ipynb
+++ b/2 - All Parks.ipynb
@@ -1293,7 +1293,7 @@
    "id": "b0e6b34d",
    "metadata": {},
    "source": [
-    "Next, we obtained the top 100 most-used tags across all parks."
+    "Next, we obtained the top 100 most-used tags across all parks and saved as a CSV."
    ]
   },
   {
@@ -1437,6 +1437,14 @@
    "source": [
     "# exporting top 100 tags to a csv for hand coding \n",
     "top_100_tags.to_csv('top_100_tags.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c3a587b",
+   "metadata": {},
+   "source": [
+    "Next we took the top 200 tags, to get a better sense of the services parks offer. "
    ]
   },
   {
@@ -1686,7 +1694,7 @@
    "id": "5b318939",
    "metadata": {},
    "source": [
-    "Finally, we want to obtain the top 50 tags by park "
+    "Finally, we want to obtain the top 50 tags by park so we can conduct some spatial analysis and look at services offered by park itself."
    ]
   },
   {
@@ -2466,7 +2474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
