Update 3 - Individual Parks-Morgan.ipynb

--- a/3 - Individual Parks-Morgan.ipynb
+++ b/3 - Individual Parks-Morgan.ipynb
@@ -65,6 +65,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# category map codes by park"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_CES = ['Existence','Recreation','Social Relations','Aesthetics', 'Knowledge Systems',\n",
+    "              'Inspiration', 'Cultural Heritage','Education', 'Sense of Place','Cultural Diversity','Spiritual']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Franklin Canyon Park\n",
+    "category_map_franklincanyon = { 'Existence': ['santamonicamountains','franklincanyonlake','losangelesmountains','mayberrylake','myerslake','grass','lake','trees','ducks','water','evergreens','frog','woods'], \n",
+    "                               'Recreation': ['rustythedog','canine','chihuahuamix','mutt','dog','pet','weeksfordogs','urbanhiking'],\n",
+    "                               'Social Relations':[],\n",
+    "                               'Aesthetics':['sky'], \n",
+    "                               'Knowledge Systems':[],\n",
+    "                               'Inspiration':[], \n",
+    "                               'Cultural Heritage':[],\n",
+    "                               'Education':[], \n",
+    "                               'Sense of Place':[],\n",
+    "                               'Cultural Diversity':[],\n",
+    "                               'Spiritual':['nature','neature']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hancock park\n",
+    "category_map_hancockpark = { 'Existence': ['garden','parks',], \n",
+    "                               'Recreation': ['gardentour','fish'],\n",
+    "                               'Social Relations':['gardenparty','people','picnik'],\n",
+    "                               'Aesthetics':[], \n",
+    "                               'Knowledge Systems':[],\n",
+    "                               'Inspiration':[], \n",
+    "                               'Cultural Heritage':['sculpture','art','statue'],\n",
+    "                               'Education':['georgecpagemuseum','museums','losangelescountymuseumofart','iceage','pleistocene','skeletons',\n",
+    "                                            'skulls','pit','tarpits','labreatarpits','labrea','museum','pagemuseum','fossils','bones','paleontology',\n",
+    "                                           'lacma','animalsmammoths','excavation','sabretooth','tigers','giantgroundsloths','gettyhouse',\n",
+    "                                           'tar','sabretoothtigers','olympusem','skeleton','fossil','mammoth','mastodon'], \n",
+    "                               'Sense of Place':[],\n",
+    "                               'Cultural Diversity':['lapride','westhollywoodpride','lagaypride','westhollywoodgaypride','losangelespride',\n",
+    "                                                     'losangelesgaypride','pride','gaypride'],\n",
+    "                               'Spiritual':['treasuresoflosangelesarchitecture']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rio del Los Angeles Park\n",
+    "category_map_riodellosangeles = { 'Existence': ['lariver','losangelesriver','grass'], \n",
+    "                               'Recreation': ['campout'],\n",
+    "                               'Social Relations':['walkathon','earthday'],\n",
+    "                               'Aesthetics':[], \n",
+    "                               'Knowledge Systems':[],\n",
+    "                               'Inspiration':[], \n",
+    "                               'Cultural Heritage':['losangelesstatehistoricpark'],\n",
+    "                               'Education':['environmentaljustice','urbanparkmovement'], \n",
+    "                               'Sense of Place':[],\n",
+    "                               'Cultural Diversity':[],\n",
+    "                               'Spiritual':['outside']}\n",
+    "#note: I recategorized grass into existence instead of aesthetics...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Runyon Canyon Park\n",
+    "category_map_runyon = { 'Existence': ['mountains','canyons','hills','mountains','hill','horse'], \n",
+    "                               'Recreation': ['hiking','hike','sunriserunyon','sunriseinrunyon','sunriseinrunyoncanyonpark',\n",
+    "                                              'trail','observatory','run','jog'],\n",
+    "                               'Social Relations':[],\n",
+    "                               'Aesthetics':['textures','texturemaps','texturemap','texture','sunset','sky','skyline',\n",
+    "                                             'clouds','sun','weather','sunrise','pacificocean','panorama','color'], \n",
+    "                               'Knowledge Systems':[],\n",
+    "                               'Inspiration':[], \n",
+    "                               'Cultural Heritage':[],\n",
+    "                               'Education':[], \n",
+    "                               'Sense of Place':[],\n",
+    "                               'Cultural Diversity':[],\n",
+    "                               'Spiritual':[]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coldwater Canyon Park\n",
+    "category_map_runyon = { 'Existence': ['tujungawashgreenway','tujungawash','pacificocean'], \n",
+    "                               'Recreation': ['summerolympics'],\n",
+    "                               'Social Relations':['zurbulon'],\n",
+    "                               'Aesthetics':['overlook','sunset','viewpoint','scenicoverview','mulhollandscenicoverview',\n",
+    "                                             'brown','barbaraafineoverlook','lasunset','midcenturymodernhomes'], \n",
+    "                               'Knowledge Systems':['lahistory','californiahistory'],\n",
+    "                               'Inspiration':['mural'], \n",
+    "                               'Cultural Heritage':['charliechaplin'],\n",
+    "                               'Education':['losangelespubliclibrary'], \n",
+    "                               'Sense of Place':[],\n",
+    "                               'Cultural Diversity':[],\n",
+    "                               'Spiritual':['church','littlebrownchurchinthevalley']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cheviot Hills Park\n",
+    "category_map_cheviothills = { 'Existence': ['sky','weather','tree','cloudy'], \n",
+    "                               'Recreation': ['westerncup','sports','quidditch','nikon','nikond','dog','puggle',\n",
+    "                                              'puppy','referee','boat'],\n",
+    "                               'Social Relations':['harrypotter','wand'],\n",
+    "                               'Aesthetics':['green','landscape'], \n",
+    "                               'Knowledge Systems':[],\n",
+    "                               'Inspiration':[], \n",
+    "                               'Cultural Heritage':['parlance'],\n",
+    "                               'Education':[], \n",
+    "                               'Sense of Place':['geeks','geek','neighborhood'],\n",
+    "                               'Cultural Diversity':[],\n",
+    "                               'Spiritual':[]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# importing shape file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### MacArthur Park"
    ]
   },
