--- a/2 - All Parks-Copy1.ipynb
+++ b/2 - All Parks-Copy1.ipynb
@@ -8,9 +8,16 @@
     "Now that we established our method for MacArthur Park, the next step was to apply this process to 12 parks across LA we selected based on a quick Flickr search to determine if there were a variety of photos with a variety of topics. \n",
     "\n",
     "This notebook is broken into three sections:\n",
-    "1. Inspect & Explore the Flickr API\n",
+    "1. Connect to the Flickr API\n",
     "2. Data Wrangling\n",
     "3. Visualizing Cultural Ecosystem Services"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect to the Flickr API"
    ]
   },
   {
@@ -37,6 +44,13 @@
    "metadata": {},
    "source": [
     "This time we wanted to pull data from all 12 pre-selected parks. Here, we searched by tags identifying each park, then saved into a dataframe "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Wrangling"
    ]
   },
   {
