--- a/2 - All Parks.ipynb
+++ b/2 - All Parks.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6526180",
    "metadata": {},
    "source": [
     "# Notebook 2: All Parks\n",
@@ -17,7 +16,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "071bcf51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +34,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c30e4d",
    "metadata": {},
    "source": [
     "This time we wanted to pull data from all 12 pre-selected parks. Here, we searched by tags identifying each park, then saved into a dataframe "
@@ -45,7 +42,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "943474ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +69,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b4214f68",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +470,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d0cfc27",
    "metadata": {},
    "source": [
     "The next step was to create a new column and assign the park name to that column so that we could more easily track tags as they relate to specific parks."
@@ -484,7 +478,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7b01565f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +496,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d995bd88",
    "metadata": {
     "scrolled": true
    },
@@ -908,7 +900,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fd3b77e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +910,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e5dd3b7",
    "metadata": {},
    "source": [
     "Next we take a look at the tags to determine how best to clean them up. "
@@ -928,7 +918,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d5593b15",
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1147,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "55b1fba9",
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1568,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "61e98079",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1599,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9305d6",
    "metadata": {},
    "source": [
     "For our next step, we needed to break apart the tags so tha no more than one tag is assocated with each park name. To do this, we used the .explode function. When moved each list item (the tags) to a new row. "
@@ -1621,7 +1607,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a6440227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,7 +1619,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90cf4691",
    "metadata": {},
    "source": [
     "Next, we grouped the tags by park name to determine how many tags are associated with each park"
@@ -1643,7 +1627,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8e7d7c07",
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1657,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa90d6e",
    "metadata": {},
    "source": [
     "Next, we obtained the top 100 most-used tags across all parks."
@@ -1683,7 +1665,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5066d79b",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1796,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ddf2e445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1826,7 +1806,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "23ee56db",
    "metadata": {},
    "outputs": [
     {
@@ -2057,7 +2036,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "65fea767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,7 +2046,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dc3459d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2089,7 +2066,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4af5f52",
    "metadata": {},
    "source": [
     "## Visualizing Cultural Ecosystem Services"
@@ -2097,7 +2073,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb06236",
    "metadata": {},
    "source": [
     "#### Radar Plot"
@@ -2106,7 +2081,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6d5c8c06",
    "metadata": {
     "scrolled": true
    },
@@ -2170,7 +2144,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a2764413",
    "metadata": {},
    "outputs": [
     {
@@ -3397,7 +3370,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c3571020",
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3432,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e15068a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3470,15 +3441,20 @@
     "\n",
     "#Source: https://blog.finxter.com/merge-dictionaries\n",
     "# Dictionary comprehension\n",
-    "cat_agg_frequencies = {k:v for x in cat_frequencies for k,v in x.items()}\n",
-    "print(cat_agg_frequencies)\n",
+    "#print(cat_frequencies)\n",
+    "cat_agg_frequencies = dict.fromkeys(cat_frequencies[0],0)\n",
+    "for cat_dict in cat_frequencies:\n",
+    "    #print(cat_dict)\n",
+    "    for key in cat_dict:\n",
+    "        value = cat_dict[key] #for each dict take first key and extracts the value\n",
+    "        cat_agg_frequencies[key]+=value\n",
+    "#print(cat_agg_frequencies)\n",
     "\n",
     "fig = go.Figure()\n",
     "\n",
-    "# compute frequency total per park\n",
+    "    # compute frequency total per park\n",
     "park_freq_total = sum(list(cat_agg_frequencies.values()))\n",
     "r_values = [x/park_freq_total for x in list(cat_agg_frequencies.values())]\n",
-    "print(r_values)\n",
     "fig.add_trace(go.Scatterpolar(\n",
     "        r=r_values, #This is a method\n",
     "        theta=list(cat_agg_frequencies.keys()),\n",
@@ -3490,7 +3466,7 @@
     "  polar=dict(\n",
     "    radialaxis=dict(\n",
     "      visible=True,\n",
-    "      range=[0, 1]\n",
+    "      range=[0, 0.5]\n",
     "    )),\n",
     "  showlegend=True\n",
     ")\n",
@@ -3500,7 +3476,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faaaebc6",
    "metadata": {},
    "source": [
     "### Map of Cultural Ecosystem Services by Park"
@@ -3509,7 +3484,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "327fc77d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3517,7 +3491,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41bd08c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3525,7 +3498,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514c068e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3547,7 +3519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
