--- a/3 - Individual Parks-Jacqueline.ipynb
+++ b/3 - Individual Parks-Jacqueline.ipynb
@@ -17,7 +17,16 @@
     "\n",
     "Tags themeselves are coded into one of the following categories (we did not cross-code, for parsimony, though we recognize that future analysis would yield more comprehensive results if tags could be cross-coded): existence, recreation, social relations, aesthetics, spritual, knowledge systems, inspiration, cultural heritage, education, sense of place, and culutral diversity. \n",
     "\n",
-    "Existence relates to wildlife or natural phenomenon, such as wild animals, trees or lakes. Recreation relates to tags that encompass hobbies or leisure activities, such as boating, sports, or photography. Social Relations consist of activities that promote social cohesion and camaraderie, such as weddings or famliy activities. Aesthetics relate to tags that encompass beauty, such as scenic overlooks, sunsets, or architecture. Spiritual tags are bucketed based on religious or faith-based activities, such as attending church or a worship ceremony. Knowledge Systems encompass collective learning or educational activities, such as birdwatching or visiting a museum. Inspiration relates to activiteis that promote self-reflection, such as examining a work of art or reflecting on one's surroundings. Cultural Heritage relates to activites centered on ethnic identities and groups, such as festivals or looking at historic monuments. Education relates to learning, and may center on visiting a library or an exibit in a museum. Sense of place refers to activitives that connect communities and neighborhoods through cultural activities or shared history. Finally, Cultural Diversity relates to activites that bring together specigic groups, such as LGBTQIA+ events or Native American cultural events.  \n",
+    "*Existence*: relates to wildlife or natural phenomenon, such as wild animals, trees or lakes. \n",
+    "*Recreation*: relates to tags that encompass hobbies or leisure activities, such as boating, sports, or photography.\n",
+    "*Social Relations*: consist of activities that promote social cohesion and camaraderie, such as weddings or famliy activities.\n",
+    "*Aesthetics*: relate to tags that encompass beauty, such as scenic overlooks, sunsets, or architecture. Spiritual tags are bucketed based on religious or faith-based activities, such as attending church or a worship ceremony. \n",
+    "*Knowledge Systems*: encompass collective learning or educational activities, such as birdwatching or visiting a museum.\n",
+    "*Inspiration*: relates to activiteis that promote self-reflection, such as examining a work of art or reflecting on one's surroundings.\n",
+    "*Cultural Heritage*: relates to activites centered on ethnic identities and groups, such as festivals or looking at historic monuments.\n",
+    "*Education*: relates to learning, and may center on visiting a library or an exibit in a museum. \n",
+    "Sense of place refers to activitives that connect communities and neighborhoods through cultural activities or shared history.\n",
+    "*Cultural Diversity*: relates to activites that bring together specigic groups, such as LGBTQIA+ events or Native American cultural events.  \n",
     "\n",
     "We coded tags that fit into each of the above cateogories, but did not code tags that did not equate to a CES (i.e., nonsensical tags, vague tags, or tags for unidentifiable built infrastructure). You can follow the process below.  "
    ]
@@ -40,127 +49,26 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ACCESS_TYP</th>\n",
-       "      <th>PARK_NAME</th>\n",
-       "      <th>ACRES</th>\n",
-       "      <th>Area_HA</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>Cheviot Hills Park and Recreation Center</td>\n",
-       "      <td>34.169</td>\n",
-       "      <td>13.827699</td>\n",
-       "      <td>POLYGON ((146843.465 -439567.433, 147202.288 -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>Franklin Canyon Park</td>\n",
-       "      <td>594.314</td>\n",
-       "      <td>199.616109</td>\n",
-       "      <td>MULTIPOLYGON (((146712.011 -433272.368, 146723...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>Angels Gate Park</td>\n",
-       "      <td>70.474</td>\n",
-       "      <td>28.520115</td>\n",
-       "      <td>POLYGON ((158289.475 -476568.553, 158303.385 -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>Coldwater Canyon Park</td>\n",
-       "      <td>41.807</td>\n",
-       "      <td>16.918901</td>\n",
-       "      <td>POLYGON ((147572.303 -430391.873, 147566.046 -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>Hancock Park</td>\n",
-       "      <td>23.098</td>\n",
-       "      <td>9.347420</td>\n",
-       "      <td>POLYGON ((151869.126 -437840.075, 151846.907 -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>MacArthur Park</td>\n",
-       "      <td>31.716</td>\n",
-       "      <td>12.834977</td>\n",
-       "      <td>POLYGON ((159231.294 -438119.410, 159070.409 -...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>Runyon Canyon Park</td>\n",
-       "      <td>133.203</td>\n",
-       "      <td>53.905646</td>\n",
-       "      <td>MULTIPOLYGON (((152208.876 -431794.069, 152175...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Open Access</td>\n",
-       "      <td>Rio de Los Angeles State Park State Recreation...</td>\n",
-       "      <td>54.853</td>\n",
-       "      <td>22.198228</td>\n",
-       "      <td>MULTIPOLYGON (((163040.145 -433874.729, 162822...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ACCESS_TYP                                          PARK_NAME    ACRES  \\\n",
-       "0  Open Access           Cheviot Hills Park and Recreation Center   34.169   \n",
-       "1  Open Access                               Franklin Canyon Park  594.314   \n",
-       "2  Open Access                                   Angels Gate Park   70.474   \n",
-       "3  Open Access                              Coldwater Canyon Park   41.807   \n",
-       "4  Open Access                                       Hancock Park   23.098   \n",
-       "5  Open Access                                     MacArthur Park   31.716   \n",
-       "6  Open Access                                 Runyon Canyon Park  133.203   \n",
-       "7  Open Access  Rio de Los Angeles State Park State Recreation...   54.853   \n",
-       "\n",
-       "      Area_HA                                           geometry  \n",
-       "0   13.827699  POLYGON ((146843.465 -439567.433, 147202.288 -...  \n",
-       "1  199.616109  MULTIPOLYGON (((146712.011 -433272.368, 146723...  \n",
-       "2   28.520115  POLYGON ((158289.475 -476568.553, 158303.385 -...  \n",
-       "3   16.918901  POLYGON ((147572.303 -430391.873, 147566.046 -...  \n",
-       "4    9.347420  POLYGON ((151869.126 -437840.075, 151846.907 -...  \n",
-       "5   12.834977  POLYGON ((159231.294 -438119.410, 159070.409 -...  \n",
-       "6   53.905646  MULTIPOLYGON (((152208.876 -431794.069, 152175...  \n",
-       "7   22.198228  MULTIPOLYGON (((163040.145 -433874.729, 162822...  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "DriverError",
+     "evalue": "/Users/jacquelineadams/Documents/GitHub/LaParks_NLP_5/LaParks_NLP/ces_laparks.shp: No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCPLE_OpenFailedError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32mfiona/_shim.pyx\u001b[0m in \u001b[0;36mfiona._shim.gdal_open_vector\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mfiona/_err.pyx\u001b[0m in \u001b[0;36mfiona._err.exc_wrap_pointer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mCPLE_OpenFailedError\u001b[0m: /Users/jacquelineadams/Documents/GitHub/LaParks_NLP_5/LaParks_NLP/ces_laparks.shp: No such file or directory",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mDriverError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7c6bb2be559a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#import parks shapefile\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgeopandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mparks_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/jacquelineadams/Documents/GitHub/LaParks_NLP_5/LaParks_NLP/ces_laparks.shp'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/geopandas/io/file.py\u001b[0m in \u001b[0;36m_read_file\u001b[0;34m(filename, bbox, mask, rows, **kwargs)\u001b[0m\n\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    159\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mfiona_env\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 160\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_or_bytes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    161\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m             \u001b[0;31m# In a future Fiona release the crs attribute of features will\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/fiona/env.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    406\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlocal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_env\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 408\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    409\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    410\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/fiona/__init__.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, driver, schema, crs, encoding, layer, vfs, enabled_drivers, crs_wkt, **kwargs)\u001b[0m\n\u001b[1;32m    254\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    255\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 256\u001b[0;31m             c = Collection(path, mode, driver=driver, encoding=encoding,\n\u001b[0m\u001b[1;32m    257\u001b[0m                            layer=layer, enabled_drivers=enabled_drivers, **kwargs)\n\u001b[1;32m    258\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/fiona/collection.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, mode, driver, schema, crs, encoding, layer, vsi, archive, enabled_drivers, crs_wkt, ignore_fields, ignore_geometry, **kwargs)\u001b[0m\n\u001b[1;32m    160\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWritingSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mfiona/ogrext.pyx\u001b[0m in \u001b[0;36mfiona.ogrext.Session.start\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mfiona/_shim.pyx\u001b[0m in \u001b[0;36mfiona._shim.gdal_open_vector\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mDriverError\u001b[0m: /Users/jacquelineadams/Documents/GitHub/LaParks_NLP_5/LaParks_NLP/ces_laparks.shp: No such file or directory"
+     ]
     }
    ],
    "source": [
@@ -867,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
