Update 2 - Individual Parks.ipynb

--- a/2 - Individual Parks.ipynb
+++ b/2 - Individual Parks.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we successfully connected to the Flickr API and tested how to wrangle the data for our test park--MacArthur Park--the next step was to apply this process to eight (8) parks across Los Angeles that we selected based on a Flickr search based on the following criteria: 1) Over 50 photos associated with the park; 2) Variety of topics found in the tags from a brief review; and 3) Diverse locations of parks throughout the city. \n",
+    "Now that we successfully connected to the Flickr API and tested how to wrangle the data for our test park--MacArthur Park--the next step was to apply this process to eight (8) parks across Los Angeles that we selected based on a Flickr search using the following criteria: 1) Over 50 photos associated with the park; 2) Variety of topics found in the tags from a brief review; and 3) Diverse locations of parks throughout the city. \n",
     "\n",
     "This notebook is broken into four sections:\n",
     "1. Connect to the Flickr API\n",
@@ -5842,11 +5842,13 @@
     "\n",
     "**Recreation**: relates to tags that encompass hobbies or leisure activities, such as boating, sports, or photography.\n",
     "\n",
-    "**Social Relations**: consist of activities that promote social cohesion and camaraderie, such as weddings or famliy activities.\n",
+    "**Social Relations**: consists of activities that promote social cohesion and camaraderie, such as weddings or famliy activities.\n",
     "\n",
-    "**Aesthetics**: relate to tags that encompass beauty, such as scenic overlooks, sunsets, or architecture. Spiritual tags are bucketed based on religious or faith-based activities, such as attending church or a worship ceremony. \n",
+    "**Aesthetics**: relates to tags that encompass beauty, such as scenic overlooks, sunsets, or architecture. \n",
     "\n",
-    "**Knowledge Systems**: encompass collective learning or educational activities, such as birdwatching or visiting a museum.\n",
+    "**Spiritual**: tags are bucketed based on religious or faith-based activities, such as attending church or a worship ceremony. \n",
+    "\n",
+    "**Knowledge Systems**: encompasses collective learning or educational activities, such as birdwatching or visiting a museum.\n",
     "\n",
     "**Inspiration**: relates to activiteis that promote self-reflection, such as examining a work of art or reflecting on one's surroundings.\n",
     "\n",
@@ -5856,7 +5858,7 @@
     "\n",
     "**Sense of Place**: refers to activitives that connect communities and neighborhoods through cultural activities or shared history.\n",
     "\n",
-    "**Cultural Diversity**: relates to activites that bring together specigic groups, such as LGBTQIA+ events or Native American cultural events.  \n",
+    "**Cultural Diversity**: relates to activites that bring together specific groups, such as LGBTQIA+ events or Native American cultural events.  \n",
     "\n",
     "We coded tags that fit into each of the above cateogories, but did not code tags that did not equate to a CES (i.e., nonsensical tags, vague tags, or tags for unidentifiable built infrastructure). Notebook 3 references the coded tags by category for visualization and analysis. "
    ]
@@ -5885,7 +5887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
