--- a/1 - MacArthur Park Test.ipynb
+++ b/1 - MacArthur Park Test.ipynb
@@ -35,10 +35,9 @@
     "\n",
     "Our process began with testing one park in order to outline, test, and prepare the steps to scale data processing, analysis, and visualization for all parks under consideration in the city of Los Angeles. This is to ensure that our code works efficiently while exploring the appropriate approach and debugging.  \n",
     "\n",
-    "This notebook is broken into three sections:\n",
+    "This notebook is broken into two sections:\n",
     "1. Inspect & Explore the Flickr API\n",
-    "2. Data Wrangling\n",
-    "3. Visualizing Cultural Ecosystem Services\n",
+    "2. Data Wrangling & Cleaning\n",
     "\n"
    ]
   },
@@ -7086,7 +7085,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Wrangling\n",
+    "## Data Wrangling & Cleaning\n",
     "\n",
     "We are interested in the 'tags' associated with each photo and create a new dataframe only with the tags associated with each photo. The other columns in the dataframe are not necessary for our analysis.\n",
     "\n",
